# music_analyser

./: .gitignore  TODO.txt  pyproject.toml  requirements-colab.txt  requirements.txt
data/: library.db
main/: app.py  features_raw.pkl  music_analyzer.ipynb
music_engine/: __init__.py  config.py
music_engine/ingestion/: loader.py
music_engine/storage/: db.py
